新增redis读取